tests/NormalTests/paczka1/small_fuzzy/75414406.err
Error in line 2: ZmEf21No2X A637 40,2
Error in line 14: glvYpC S103 -1,0
